solc_mutator_ossfuzz_seed_corpus/test_sol/test_5479357fdc09649599e12c6d1bed3faa6f0f926ba24876371a35331915545621_746f067ef4976663d8d734c11205db3fb218fbec_sol.sol
==== Source:  ====

==== Source: su0.sol ====

==== Source: su1.sol ====
function f0(bool i0,address i1,function () external i2,address i3)  returns(address o0,bytes13 o1)
{ }
contract C0 {
  function f1(int96 i0) external returns(bytes23 o0,C0 o1,bool o2)
  { }
  function f2(int88 i0) external returns(int168 o0,uint232 o1,address o2)
  {
(bytes23 l0, C0 l1, bool l2) = this.f1(19096493368793952349048314943);
o0 += ((-153856136172585023888857200824334738424191677721053 | 8962104671199616472052864036991997552166807607664) * -147067983494589855746280044767112039647966723070455);

  }
}
import "su0.sol";
// ----
// TypeError 7366: (su1.sol:347-516): Operator += not compatible with types int168 and int_const 2262...(93 digits omitted)...7835
